fix(AttentionBox): component should not fit to size of text, but stretch

--- a/src/components/AttentionBox/AttentionBox.module.scss
+++ b/src/components/AttentionBox/AttentionBox.module.scss
@@ -6,7 +6,7 @@
   position: relative;
   padding: var(--spacing-medium);
   border-radius: var(--border-radius-medium);
-  width: fit-content;
+  width: 100%;
   height: fit-content;
   @include theme-prop(color, dark-color);
 }
